tests/baselines/reference/parserStrictMode9.errors.txt
parserStrictMode9.ts(2,18): error TS1100: Invalid use of 'eval' in strict mode.


==== parserStrictMode9.ts (1 errors) ====
    "use strict";
    var v = function eval() {
                     ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
    };